--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ install:
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
   - SET PATH=C:\Program Files\PostgreSQL\10\bin\;%PATH%
-  - psql -d postgres -U postgres -c 'CREATE EXTENSION postgis;'
+  - psql -d postgres -U postgres -c "CREATE EXTENSION postgis;"
 
 build_script:
   - cd %APPVEYOR_BUILD_FOLDER%/example/nanogis
