--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,10 +32,7 @@ install:
   - curl -L -O -S -s http://download.osgeo.org/postgis/windows/pg10/archive/postgis-bundle-pg10-2.5.0x64.zip
   - call "C:\Program Files\7-Zip\7z.exe" x postgis-bundle-pg10-2.5.0x64.zip > nul
   - xcopy /s /y /q postgis-bundle-pg10-2.5.0x64 "C:\Program Files\PostgreSQL\10"
-  - SET PGUSER=postgres
-  - SET PGPASSWORD=Password12!
-  - SET PATH=C:\Program Files\PostgreSQL\10\bin\;%PATH%
-  - psql -d postgres -U postgres -c "CREATE EXTENSION postgis;"
+  - call "C:\Program Files\PostgreSQL\10\bin\psql.exe" "host=localhost dbname=postgres user=postgres password=Password12!" -c "CREATE EXTENSION postgis;"
 
 build_script:
   - cd %APPVEYOR_BUILD_FOLDER%/example/nanogis
