--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -39,7 +39,7 @@ install:
   - cmd: SET PGPASSWORD=Password12!
   - cmd: SET PATH=C:\Program Files\PostgreSQL\10\bin\;%PATH%
   - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
-  - sh: sudo add-apt-repository ppa:ubuntugis/ppa
+  - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
   - sh: sudo apt-get update
   - sh: sudo apt-get install git
   - sh: sudo apt-get install libboost-dev
