--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,12 +41,12 @@ install:
   - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
   - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
   - sh: sudo apt-get update
-  - sh: sudo apt-get install git
-  - sh: sudo apt-get install libboost-dev
-  - sh: sudo apt-get install libgdal-dev
-  - sh: sudo apt-get install libproj-dev
-  - sh: sudo apt-get install qt512-meta-minimal
-  - sh: sudo apt-get install qt512imageformats
+  - sh: sudo apt-get -y install git
+  - sh: sudo apt-get -y install libboost-dev
+  - sh: sudo apt-get -y install libgdal-dev
+  - sh: sudo apt-get -y install libproj-dev
+  - sh: sudo apt-get -y install qt512-meta-minimal
+  - sh: sudo apt-get -y install qt512imageformats
 
 before_test:
   - cmd: psql -d postgres -U postgres -c "CREATE EXTENSION postgis;"
