--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ for:
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
-    - sh: make -f ./makefile.ubuntu test CXX=g++ CXXFLAGS+=-std=c++17 CXXFLAGS+=-DBARK_TEST_MSSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=Password12!
+    - sh: make -f ./makefile.ubuntu test CXX=g++-8 CXXFLAGS+=-std=c++17 CXXFLAGS+=-DBARK_TEST_MSSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=Password12!
 
   build_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/example/nanogis
