--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,9 @@ for:
     - mssql
     - mysql
 
+  environment:
+    COMPILER: g++-8
+
   install:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
@@ -35,10 +38,12 @@ for:
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
-    - sh: make -f ./makefile.ubuntu test CXX=g++-8 CXXFLAGS+=-std=c++17 CXXFLAGS+=-DBARK_TEST_MSSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=Password12!
+    - sh: make -f ./makefile.ubuntu test CXX=$COMPILER CXXFLAGS+=-std=c++17 CXXFLAGS+=-DBARK_TEST_MSSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=Password12!
 
   build_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/example/nanogis
+    - sh: qmake QMAKE_CXX=$COMPILER QMAKE_CC=$COMPILER QMAKE_LINK=$COMPILER QMAKE_CXXFLAGS+=-std=c++17
+    - sh: make CXX=$COMPILER CC=$COMPILER LINK=$COMPILER CXXFLAGS+=-fPIC CFLAGS+=-fPIC CXXFLAGS+=-std=c++17
 
 -
   matrix:
