--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,7 +63,6 @@ for:
     PATH: "C:\\Program Files\\PostgreSQL\\10\bin\\;%PATH%"
     PGUSER: postgres
     PGPASSWORD: Password12!
-    CXXFLAGS: "/DBARK_TEST_MYSQL_SERVER=localhost /DBARK_TEST_ODBC_MSSQL_SERVER=(local)\\SQL2017 /DBARK_TEST_ODBC_MYSQL_SERVER=localhost /DBARK_TEST_ODBC_POSTGRES_SERVER=localhost /DBARK_TEST_POSTGRES_SERVER=localhost /DBARK_TEST_DATABASE_PWD=Password12!"
     INCLUDE: "%OSGEO4W_ROOT%\\include;%OSGEO4W_ROOT%\\include\\libpq;%OSGEO4W_ROOT%\\include\\mysql;C:\\Libraries\\boost_1_69_0;%INCLUDE%"
     LIB: "%OSGEO4W_ROOT%\\lib;%LIB%"
 
@@ -98,6 +97,7 @@ for:
   test_script:
     - cd %APPVEYOR_BUILD_FOLDER%/test
     - nmake -f ./makefile.windows test
+    - SET CXXFLAGS=/DBARK_TEST_MYSQL_SERVER=localhost /DBARK_TEST_ODBC_MSSQL_SERVER=(local)\\SQL2017 /DBARK_TEST_ODBC_MYSQL_SERVER=localhost /DBARK_TEST_ODBC_POSTGRES_SERVER=localhost /DBARK_TEST_POSTGRES_SERVER=localhost /DBARK_TEST_DATABASE_PWD=Password12!&& nmake -f ./makefile.windows test
 
   artifacts:
     - path: example\%NANOGIS_ARCHIVE%
