--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
 - mkdir $DEB_ROOT/usr/local/bin
 - cp $TRAVIS_BUILD_DIR/example/nanogis/nanogis $DEB_ROOT/usr/local/bin
 - mkdir $DEB_ROOT/DEBIAN
-- cp $TRAVIS_BUILD_DIR/example/nanogis/control $DEB_ROOT/DEBIAN
+- cp $TRAVIS_BUILD_DIR/example/nanogis/control.ubuntu.1604 $DEB_ROOT/DEBIAN/control
 - dpkg-deb --build $DEB_ROOT
 deploy:
   provider: releases
