--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,8 +30,9 @@ for:
     - sh: sudo apt-get update
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
-    - sh: sudo apt-get -y install libproj-dev
+    - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
+    - sh: sudo apt-get -y install libssl-dev
     - sh: sudo apt-get -y install qt512-meta-minimal
     - sh: sudo apt-get -y install qt512imageformats
     - sh: source /opt/qt512/bin/qt512-env.sh
