--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,11 +28,11 @@ for:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
+    - sh: sudo apt-get -y install libpq-dev
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
-    - sh: sudo apt-get -y install libssl-dev
     - sh: sudo apt-get -y install qt512-meta-minimal
     - sh: sudo apt-get -y install qt512imageformats
     - sh: source /opt/qt512/bin/qt512-env.sh
