--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,9 @@ for:
     DEB_NAME: "nanogis.ubuntu.1804"
 
   install:
-    - sh: sudo apt-get -y install libpq-dev
+    - sh: sudo apt-get install wget ca-certificates
+    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/postgresql.list'
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
