--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,7 @@ for:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
-    - sh: sudo apt install postgis
+    - sh: sudo apt-get -y install postgis
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
