--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,16 +28,16 @@ for:
     PGPASSWORD: Password12!
 
   install:
-    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/postgresql.list'
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/postgresql.list'
     - sh: sudo apt-get update
-    - sh: sudo apt-get -y install postgis
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
+    - sh: sudo apt-get -y install postgis
     - sh: sudo apt-get -y install qt512-meta-minimal
     - sh: sudo apt-get -y install qt512imageformats
     - sh: source /opt/qt512/bin/qt512-env.sh
@@ -58,7 +58,7 @@ for:
     - sh: dpkg-deb --build $APPVEYOR_BUILD_FOLDER/$DEB_NAME
 
   before_test:
-    - sh: psql -d postgres -U postgres -c "CREATE EXTENSION postgis;"
+    - sh: psql -d postgres -U postgres -h localhost -c "CREATE EXTENSION postgis;"
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
