--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,8 +24,6 @@ for:
   environment:
     COMPILER: g++-8
     DEB_NAME: "nanogis.ubuntu.1804"
-    PGUSER: postgres
-    PGPASSWORD: Password12!
 
   install:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
@@ -58,7 +56,7 @@ for:
     - sh: dpkg-deb --build $APPVEYOR_BUILD_FOLDER/$DEB_NAME
 
   before_test:
-     - sh: sudo -u postgres psql -d postgres -U postgres -h localhost -c "CREATE EXTENSION postgis;"
+     - sh: psql 'host=localhost dbname=postgres user=postgres password=Password12!' -c "CREATE EXTENSION postgis;"
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
