--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,8 +28,8 @@ for:
   install:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/postgresql.list'
+    #- sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+    #- sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/postgresql.list'
     - sh: sudo apt-get update
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
