--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ for:
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
-    - sh: sudo apt-get -y install postgis
+    - sh: sudo apt-get -y install postgresql-11-postgis-2.5
     - sh: sudo apt-get -y install qt512-meta-minimal
     - sh: sudo apt-get -y install qt512imageformats
     - sh: source /opt/qt512/bin/qt512-env.sh
