--- a/test/makefile.ubuntu
+++ b/test/makefile.ubuntu
@@ -1,5 +1,5 @@
 CXXFLAGS:=-Wall -std=c++17 -O2
-CPPFLAGS:=-DACCEPT_USE_OF_DEPRECATED_PROJ_API_H
+CPPFLAGS+=-D ACCEPT_USE_OF_DEPRECATED_PROJ_API_H
 EXECUTABLE=run_me
 INCLUDEPATH=../.. /usr/include/gdal /usr/include/mysql /usr/include/postgresql
 INCFLAGS=$(foreach x, $(INCLUDEPATH), -I$x)
