--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 script:
 - wget -P $TRAVIS_BUILD_DIR/.. https://github.com/catchorg/Catch2/releases/download/v2.9.2/catch.hpp
 - cd $TRAVIS_BUILD_DIR/test
-- make -f ./makefile.ubuntu test CXX=$COMPILER CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_POSTGRES_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=
+- make -f ./makefile.ubuntu test CXX=$COMPILER CXXFLAGS+=-DACCEPT_USE_OF_DEPRECATED_PROJ_API_H CXXFLAGS+=-DBARK_TEST_MYSQL_SERVER=localhost CXXFLAGS+=-DBARK_TEST_POSTGRES_SERVER=localhost CXXFLAGS+=-DBARK_TEST_DATABASE_PWD=
 - cd $TRAVIS_BUILD_DIR/example/nanogis
 - qmake QMAKE_CXX=$COMPILER QMAKE_LINK=$COMPILER
 - make CXX=$COMPILER LINK=$COMPILER
