--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -59,7 +59,7 @@ for:
 
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
-    - sh: export CXXFLAGS="-DACCEPT_USE_OF_DEPRECATED_PROJ_API_H -DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_ODBC_MSSQL_SERVER=localhost -DBARK_TEST_POSTGRES_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
+    - sh: export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_ODBC_MSSQL_SERVER=localhost -DBARK_TEST_POSTGRES_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
     - sh: make -f ./makefile.ubuntu test CXX=$COMPILER
 
   artifacts:
