--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ for:
 
   install:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
-    - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - sh: sudo add-apt-repository ppa:ubuntugis/ppa
     - sh: sudo apt-get update
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
