--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
       apt:
         sources:
         - sourceline: ppa:beineri/opt-qt-5.12.0-bionic
-        - sourceline: ppa:ubuntugis/ubuntugis-unstable
+        - sourceline: ppa:ubuntugis/ppa
         packages:
         - g++-8
         - libboost-dev
