--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,13 +27,13 @@ for:
 
   install:
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
-    - sh: sudo add-apt-repository ppa:ubuntugis/ppa
+    - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
+    - sh: sudo apt-get -y install postgresql-12-postgis-3
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
-    - sh: sudo apt-get -y install postgresql-12-postgis-3
     - sh: sudo apt-get -y install qt512-meta-minimal
     - sh: sudo apt-get -y install qt512imageformats
     - sh: source /opt/qt512/bin/qt512-env.sh
@@ -95,9 +95,9 @@ for:
     - call %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT% > NUL
     - del /Q /F %OSGEO4W_ROOT%\bin\boost*.dll %OSGEO4W_ROOT%\bin\mod_spatialite.dll
     - call %OSGEO4W_ROOT%\bin\o4w_env.bat
-    - curl -L -O -S -s http://download.osgeo.org/postgis/windows/pg10/archive/postgis-bundle-pg10-2.5.0x64.zip
-    - call "C:\Program Files\7-Zip\7z.exe" x postgis-bundle-pg10-2.5.0x64.zip > nul
-    - xcopy /s /y /q postgis-bundle-pg10-2.5.0x64 "C:\Program Files\PostgreSQL\10"
+    - curl -L -O -S -s http://download.osgeo.org/postgis/windows/pg10/postgis-bundle-pg10-3.0.1x64.zip
+    - call "C:\Program Files\7-Zip\7z.exe" x postgis-bundle-pg10-3.0.1x64.zip > nul
+    - xcopy /s /y /q postgis-bundle-pg10-3.0.1x64 "C:\Program Files\PostgreSQL\10"
     - call C:\Qt\5.12\msvc2017_64\bin\qtenv2.bat
     - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
     - ps: Invoke-WebRequest -Uri https://github.com/catchorg/Catch2/releases/download/v2.12.3/catch.hpp -OutFile $env:OSGEO4W_ROOT\include\catch.hpp
