--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,10 +26,13 @@ for:
     DEB_NAME: "nanogis.ubuntu.1804"
 
   install:
+    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/pgdg.list.list'
+    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+    - sh: sudo apt update
+    - sh: sudo apt-get -y install postgresql-12-postgis-3
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
-    - sh: sudo apt-get -y install postgresql-12-postgis-3
     - sh: sudo apt-get -y install git
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
