--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,17 +19,12 @@ for:
   services:
     - mssql
     - mysql
-    - postgresql
 
   environment:
     COMPILER: g++-8
     DEB_NAME: "nanogis.ubuntu.1804"
 
   install:
-    - sh: sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/pgdg.list.list'
-    - sh: wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-    - sh: sudo apt update
-    - sh: sudo apt-get -y install postgresql-12-postgis-3
     - sh: sudo add-apt-repository ppa:beineri/opt-qt-5.12.0-bionic
     - sh: sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sh: sudo apt-get update
@@ -56,13 +51,9 @@ for:
     - sh: cp $APPVEYOR_BUILD_FOLDER/example/nanogis/control.ubuntu.1804 $APPVEYOR_BUILD_FOLDER/$DEB_NAME/DEBIAN/control
     - sh: dpkg-deb --build $APPVEYOR_BUILD_FOLDER/$DEB_NAME
 
-  before_test:
-     - sh: sudo -u postgres psql -c "ALTER USER postgres with password 'Password12!';" postgres
-     - sh: psql 'host=localhost dbname=postgres user=postgres password=Password12!' -c "CREATE EXTENSION postgis;"
-
   test_script:
     - sh: cd $APPVEYOR_BUILD_FOLDER/test
-    - sh: export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_ODBC_MSSQL_SERVER=localhost -DBARK_TEST_POSTGRES_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
+    - sh: export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_ODBC_MSSQL_SERVER=localhost -DBARK_TEST_DATABASE_PWD=Password12!"
     - sh: make -f ./makefile.ubuntu test CXX=$COMPILER
 
   artifacts:
