--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ matrix:
   - os: linux
     env: COMPILER=g++-8
     addons:
-      postgresql: "10"
       apt:
         sources:
         - sourceline: ppa:beineri/opt-qt-5.12.0-bionic
@@ -21,18 +20,15 @@ matrix:
         - libboost-dev
         - libgdal-dev
         - libgl1-mesa-dev
-        - postgresql-10-postgis-3
         - qt512-meta-minimal
         - qt512imageformats
         - doxygen
-    before_script:
-      - psql -U postgres -c "create extension postgis"
 install:
 - source /opt/qt512/bin/qt512-env.sh
 script:
 - wget -P $TRAVIS_BUILD_DIR/.. https://github.com/catchorg/Catch2/releases/download/v2.13.3/catch.hpp
 - cd $TRAVIS_BUILD_DIR/test
-- export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_POSTGRES_SERVER=localhost -DBARK_TEST_DATABASE_PWD="
+- export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_DATABASE_PWD="
 - make -f ./makefile.ubuntu test CXX=$COMPILER
 - cd $TRAVIS_BUILD_DIR/example/nanogis
 - qmake QMAKE_CXX=$COMPILER QMAKE_LINK=$COMPILER
