--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,7 +30,7 @@ for:
     - sh: sudo apt-get -y install libboost-dev
     - sh: sudo apt-get -y install libgdal-dev
     - sh: sudo apt-get -y install libgl1-mesa-dev
-    - sh: sudo apt-get -y install qt515-meta-minimal
+    - sh: sudo apt-get -y install qt515base
     - sh: sudo apt-get -y install qt515imageformats
     - sh: source /opt/qt515/bin/qt515-env.sh
     - ps: Invoke-WebRequest -Uri https://github.com/catchorg/Catch2/releases/download/v2.13.3/catch.hpp -OutFile $env:APPVEYOR_BUILD_FOLDER\..\catch.hpp
